Fix participant list first name overlapping the table header

--- a/indico_themes_canonical/static/css/_default/participant-list.css
+++ b/indico_themes_canonical/static/css/_default/participant-list.css
@@ -27,6 +27,7 @@
 table.i-table thead {
   position: sticky;
   top: 0;
+  z-index: 3;
 }
 
 table thead th:first-child,
